--- a/analysis/multi_group_compare_predictdb_munro_updated.Rmd
+++ b/analysis/multi_group_compare_predictdb_munro_updated.Rmd
@@ -295,7 +295,7 @@ make_locusplot(finemap_res_predictdb,
                highlight_pip = 0.8,
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -313,7 +313,7 @@ make_locusplot(finemap_res_munro,
                highlight_pip = 0.8,
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -415,7 +415,7 @@ make_locusplot(finemap_res_predictdb,
                focal_gene = "RTEL1",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -455,7 +455,7 @@ make_locusplot(finemap_region_res_predictdb,
                highlight_pip = 0.8,
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
 
@@ -477,7 +477,7 @@ make_locusplot(finemap_res_munro,
                focal_gene = "RTEL1",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -496,7 +496,7 @@ make_locusplot(finemap_merged_region_res_munro,
                highlight_pip = 0.8,
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                focal_gene = "RTEL1",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
@@ -520,7 +520,7 @@ make_locusplot(finemap_res_predictdb,
                #focal_gene = "USP4",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
 cor_res <- get_region_cor(region_id = "3_49279539_51797999", cor_dir = cor_dir)
@@ -533,7 +533,7 @@ make_locusplot(finemap_res_predictdb,
                focal_gene = "USP4",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -553,7 +553,7 @@ make_locusplot(finemap_res_munro,
                focal_gene = "USP4",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
 cor_res <- get_region_cor(region_id = "3_49279539_51797999", cor_dir = cor_dir)
@@ -566,7 +566,7 @@ make_locusplot(finemap_res_munro,
                #focal_gene = "USP4",
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 ```
 
@@ -584,7 +584,7 @@ make_locusplot(finemap_merged_region_res_munro,
                highlight_pip = 0.8,
                R_snp_gene = cor_res$R_snp_gene,
                R_gene = cor_res$R_gene,
-               legend.position = "right",
+               legend.position = "top",
                focal_gene = "USP4",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
