--- a/analysis/multi_group_compare_predictdb_munro_4weights_8weights.Rmd
+++ b/analysis/multi_group_compare_predictdb_munro_4weights_8weights.Rmd
@@ -422,12 +422,17 @@ DT::datatable(df_region[df_region$susie_pip > 0.8,],caption = htmltools::tags$ca
 
 ## TNFRSF6B and different settings 
 
+rs202143810
 
-| weights                                      | pre-estimated L  | genes with PIP > 0.8 | SNPs with PIP > 0.8    |
-|----------------------------------------------|------------------|----------------------|------------------------|
-| predictdb eQTL + sQTL                        | 3                | /                    | rs6089961, rs202143810 |
-| predictdb eQTL + sQTL                        | set L=1 manually | TNFRSF6B             | /                      |
-| predictdb  sQTL                              | 3                | TNFRSF6B             | rs6089961, rs202143810 |
-| predictdb eQTL + sQTL + Munro rsQTL + apaQTL | 3                | /                    | rs6089961, rs202143810 |
-| predictdb eQTL + sQTL + Munro 6 modalities   | 3                | TNFRSF6B             | rs6089961, rs202143810 |
-| Munro 6 modalities, region merge             | 4                | /                    | rs6089961, rs202143810 |
+| weights                                      | pre-estimated L  | genes with PIP > 0.8     | SNPs with PIP > 0.8    |
+|----------------------------------------------|------------------|--------------------------|------------------------|
+| predictdb eQTL + sQTL                        | 3                | /                        | rs6089961, rs202143810 |
+| predictdb eQTL + sQTL                        | set L=1 manually | TNFRSF6B                 | /                      |
+| predictdb eQTL + sQTL                        | set L=10 manually| ARFRP: combined pip > 0.8| rs202143810            |
+| predictdb sQTL                               | 3                | TNFRSF6B                 | rs6089961, rs202143810 |
+| predictdb eQTL + sQTL + Munro rsQTL + apaQTL | 3                | /                        | rs6089961, rs202143810 |
+| predictdb eQTL + sQTL + Munro rsQTL + apaQTL | set L=10 manually| ARFRP: combined pip > 0.8| rs6089961, rs202143810 |
+| predictdb eQTL + sQTL + Munro 6 modalities   | 3                | TNFRSF6B                 | rs6089961, rs202143810 |
+| Munro 6 modalities, region merge             | 4                | /                        | rs6089961, rs202143810 |
+
+
