--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -77,16 +77,22 @@ Package V2.0
   
   Comparing results from Munro weights & predictdb weights
   
-  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated.html)
-  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update.html)
+  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V2](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs.html)
+  * [LDL + IBD: predictdb eQTL + sQTL VS Munro 6 modalities -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated_cs_thin1.html)
+  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V2](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update.html)
+  * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
+  
+  
   
 # LDL examples
 
 package v2.0
 
+* [Predictdb eQTL&sQTL from Liver](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_predictdb_esQTL.html)
 * [Comparing single-group & multi-group for LDL – old PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare_oldpip.html)
 * [Comparing single-group & multi-group for LDL - new PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare.html)
-
 * [Comparing different PIP combining functions](https://sq-96.github.io/multigroup_ctwas_analysis/compare_pip_func_LDL.html)
+
+
 
   
