--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -82,12 +82,11 @@ Package V2.0
   * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V2](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update.html)
   * [IBD: predictdb eQTL + sQTL + Munro rsQTL + apaQTL VS all 8 weights -- thin method V1](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_4weights_8weights_update_thin1.html)
   
-  
-  
 # LDL examples
 
 package v2.0
 
+* [Predictdb sQTL from Liver](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_predictdb_sQTL.html)
 * [Predictdb eQTL&sQTL from Liver](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_predictdb_esQTL.html)
 * [Comparing single-group & multi-group for LDL – old PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare_oldpip.html)
 * [Comparing single-group & multi-group for LDL - new PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare.html)
