--- a/analysis/LDL_predictdb_sQTL.Rmd
+++ b/analysis/LDL_predictdb_sQTL.Rmd
@@ -18,6 +18,8 @@ We run with uniform prior.
 
 ## Run with ctwas processed zscores
 
+### Using SNP only
+
 |    | standard susie (PIP_CS) |               |                 |                                                          | ctwas finemapping (PIP_CS) |               |                 |                                                         |
 |----|-------------------------|---------------|-----------------|----------------------------------------------------------|----------------------------|---------------|-----------------|---------------------------------------------------------|
 |    | PIP_rs6062496(sQTL)     | PIP_rs6089961 | PIP_rs202143810 | othersnps                                                | PIP_rs6062496(sQTL)        | PIP_rs6089961 | PIP_rs202143810 | othersnps                                               |
@@ -38,6 +40,23 @@ We run with uniform prior.
 load("/project/xinhe/xsun/multi_group_ctwas/8.deciding_weights/data/R2_topsnp.rdata")
 DT::datatable(R2,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','R2 for the SNPs above'),options = list(pageLength = 10) )
 ```
+
+
+### Using SNP + intron of TNFRSF6B
+
+|    | standard susie (PIP_CS)         |               |                 |                                                          | ctwas finemapping (PIP_CS)       |               |                 |                                                         |
+|----|---------------------------------|---------------|-----------------|----------------------------------------------------------|---------------------------------|---------------|-----------------|---------------------------------------------------------|
+| L  | PIP_rs6062496(sQTL)             | PIP_rs6089961 | PIP_rs202143810 | othersnps                                                | PIP_rs6062496(sQTL)             | PIP_rs6089961 | PIP_rs202143810 | othersnps                                               |
+| 1  | rs6062496_0.5_1; TNFRSF6B_0.5_1 |               |                 |                                                          | rs6062496_0.5_1; TNFRSF6B_0.5_1 |               |                 |                                                         |
+| 2  |                                 | 1_1           | 1_2             |                                                          |                                 | 1_1           | 1_2             |                                                         |
+| 3  |                                 | 1_3           | 1_2             | rs112662625 0.89_1;rs113365193 0.06_1                    | rs6062496_0.5_1; TNFRSF6B_0.5_1 | 1_3           | 1_2             |                                                         |
+| 4  |                                 | 1_1           | 1_2             |                                                          |                                 | 1_1           | 1_2             |                                                         |
+| 5  |                                 | 1_3           | 1_2             | rs112662625 0.90_1;rs113365193 0.06_1                    | rs6062496_0.5_1; TNFRSF6B_0.5_1 | 1_3           | 1_2             |                                                         |
+| 6  |                                 | 1_1           | 1_2             |                                                          |                                 | 1_1           | 1_2             | rs35201382 0.14_1                                       |
+| 7  |                                 | 1_3           | 1_2             | rs112662625 0.90_1;rs113365193 0.06_1                    | rs6062496_0.5_1; TNFRSF6B_0.5_1 | 1_3           | 1_2             | rs35201382 0.13_3                                       |
+| 8  |                                 | 1_1           | 1_2             | rs35201382 0.22_1                                        |                                 | 1_1           | 1_2             | rs35201382 0.30_1                                       |
+| 9  |                                 | 1_5           | 1_2             | rs35201382 0.21_5, rs112662625 0.90_1;rs113365193 0.07_1 | rs6062496_0.5_1; TNFRSF6B_0.5_1 | 1_3           | 1_2             | rs35201382 0.29_3                                       |
+| 10 |                                 | 1_5           | 1_2             | rs35201382 0.2_5, rs367993153 0.91_1, rs1295810 0.08_1   |                                 | 1_1           | 1_2             | rs35201382 0.27_1, rs1295810 0.94_9, rs367993153 0.03_9 |
 
 
 ## Run with raw zscores
