--- a/analysis/LDL_predictdb_esQTL.Rmd
+++ b/analysis/LDL_predictdb_esQTL.Rmd
@@ -29,7 +29,7 @@ We present a sample cTWAS report based on real data analysis. The analyzed trait
 
 - GWAS Z-scores
 
-The analyzed trait is LDL cholesterol. The summary statistics are downloaded from https://gwas.mrcieu.ac.uk, using dataset ID: `ukb-d-30780_irnt`. The number of SNPs it contains is 13,586,016.
+The summary statistics for LDL are downloaded from https://gwas.mrcieu.ac.uk, using dataset ID: `ukb-d-30780_irnt`. The number of SNPs it contains is 13,586,016.
 
 The sample size is 
 
@@ -61,18 +61,18 @@ We map the reference SNPs and LD matrices to regions following the instructions 
 
 When processing z-scores, we exclude multi-allelic and strand-ambiguous variants by setting `drop_multiallelic = TRUE` and `drop_strand_ambig = TRUE`.
 
-Users can expand the code snippets below to view the exact code used.
+The process can be divided into steps below, users can expand the code snippets below to view the exact code used.
+
+ - Input and output settings
 
 ```{r echo=T, eval=FALSE}
 
-## input data
-
 weight_files <- c("/project2/xinhe/shared_data/multigroup_ctwas/weights/expression_models/expression_Liver.db","/project2/xinhe/shared_data/multigroup_ctwas/weights/splicing_models/splicing_Liver.db")
 z_snp_file <- "/project2/xinhe/shared_data/multigroup_ctwas/gwas/ctwas_inputs_zsnp/LDL-ukb-d-30780_irnt.z_snp.RDS"
-region_file <- system.file("extdata/ldetect", paste0("EUR.", genome_version, ".ldetect.regions.RDS"), package = "ctwas")
-region_info <- readRDS(region_file)
 genome_version <- "b38"
 LD_dir <- "/project2/mstephens/wcrouse/UKB_LDR_0.1/"
+region_file <- system.file("extdata/ldetect", paste0("EUR.", genome_version, ".ldetect.regions.RDS"), package = "ctwas")
+region_info <- readRDS(region_file)
 
 ## output dir
 outputdir <- "/project/xinhe/xsun/multi_group_ctwas/examples/results_predictdb_main/LDL-ukb-d-30780_irnt/"
@@ -81,7 +81,11 @@ dir.create(outputdir, showWarnings=F, recursive=T)
 ## other parameters
 ncore <- 5
 
-## process inputs
+```
+
+- Preprocessing GWAS
+
+```{r echo=T, eval=FALSE}
 
 ### Preprocess LD_map & SNP_map
 region_metatable <- region_info
@@ -101,7 +105,12 @@ z_snp <- preprocess_z_snp(z_snp = z_snp,
                           drop_multiallelic = TRUE, 
                           drop_strand_ambig = TRUE)
 
-### Preprocess weights
+```
+
+- Preprocessing weights
+
+```{r echo=T, eval=FALSE}
+
 weights_expression1 <- preprocess_weights(weight_file = weight_files[1],
                                               region_info = region_info,
                                               gwas_snp_ids = z_snp$id,
@@ -135,16 +144,7 @@ weights <- c(weights_expression1,weights_splicing1)
 
 # Running cTWAS analysis
 
-We use the function ctwas_sumstats() to run cTWAS analysis with LD. Details are shown in the tutorial. https://xinhe-lab.github.io/multigroup_ctwas/articles/running_ctwas_analysis.html#running-ctwas-main-function
-
-The arguments are all in defaul settings, more specifically, 
-
-- we set `group_prior_var_structure = "shared_type"` to allow all groups in one molecular QTL type to share the same variance parameter
-- we first estimate the number of causal signals (L) for each region by setting `filter_L = TRUE`
-- The package will not compute the non-SNP PIP by setting `filter_nonSNP_PIP = TRUE` 
-- We select regions with non-SNP PIP > 0.5 by setting `min_nonSNP_PIP = 0.5`
-
-We use the function `ctwas_sumstats()` to run the cTWAS analysis with LD. For more details on this function, refer to the cTWAS tutorial: https://xinhe-lab.github.io/multigroup_ctwas/articles/running_ctwas_analysis.html#running-ctwas-main-function
+We use the ctwas main function `ctwas_sumstats()` to run the cTWAS analysis with LD. For more details on this function, refer to the cTWAS tutorial: https://xinhe-lab.github.io/multigroup_ctwas/articles/running_ctwas_analysis.html#running-ctwas-main-function
 
 All arguments are set to their default values, with the following specific settings:
 
@@ -261,9 +261,12 @@ finemap_res <- anno_finemap_res(finemap_res,
                                          add_position = TRUE,
                                          use_gene_pos = "mid")
 
-DT::datatable(finemap_res[finemap_res$susie_pip > 0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','The annotated fine-mapping results, ones with susie pip > 0.8 are shown'),options = list(pageLength = 5) )
+finemap_res_show <- finemap_res[finemap_res$cs_index!=0 &finemap_res$type !="SNP",]
+
+DT::datatable(finemap_res_show,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','The annotated fine-mapping results, ones within credible sets are shown'),options = list(pageLength = 5) )
 
 ```
+
 
 For all genes analyzed, we compare the z-scores and fine-mapping PIPs
 
@@ -279,12 +282,31 @@ ggplot(data = finemap_res[finemap_res$type!="SNP",], aes(x = abs(z), y = susie_p
 
 Next, we compute gene PIPs across different types of molecular traits
 
-```{r echo=T, eval=T}
+```{r echo=T, eval=T, message=F, warning=F}
+library(dplyr)
+
 combined_pip_by_type <- combine_gene_pips(finemap_res,
                                           group_by = "gene_name",
                                           by = "type",
                                           method = "combine_cs",
                                           filter_cs = TRUE)
+
+combined_pip_by_type$sQTL_pip_partition <- sapply(combined_pip_by_type$gene_name, function(gene) {
+  
+  # Find rows in finemap_res_show matching the gene_name
+  matching_rows <- finemap_res_show %>%
+    filter(gene_name == gene, type == "sQTL")  # Match gene_name and filter by type == "sQTL"
+  
+  # If no matching rows, return NA
+  if (nrow(matching_rows) == 0) {
+    return(NA)
+  }
+  
+  # Create the desired string format: molecular_id-round(susie_pip, digits = 4)
+  paste(matching_rows$molecular_id, "-PIP=", round(matching_rows$susie_pip, digits = 4), sep = "", collapse = ", ")
+})
+
+
 
 DT::datatable(combined_pip_by_type,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','Gene PIPs, only genes within credible sets are shown'),options = list(pageLength = 5) )
 
