--- a/analysis/LDL_predictdb_esQTL1.Rmd
+++ b/analysis/LDL_predictdb_esQTL1.Rmd
@@ -6,14 +6,7 @@ output:
   workflowr::wflow_html:
     code_folding: hide
     toc: true
-    
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(fig.path = "docs/figure/LDL_predictdb_esQTL.Rmd/")
-```
-
-
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(ctwas)
@@ -205,7 +198,7 @@ We extract the estimated parameters by `param <- ctwas_res$param`
 
 we make plots using the function `make_convergence_plots(param, gwas_n)` to see how estimated parameters converge during the execution of the program:
 
-```{r echo=T, eval=T,fig.path="docs/figure/LDL_predictdb_esQTL.Rmd/"}
+```{r echo=F, eval=T}
 param <- ctwas_res$param
 make_convergence_plots(param, gwas_n)
 ```
